# tree-sitter-applesoft

./: .gitignore  .npmignore  CHANGELOG.md  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README-crate.md  README.md  binding.gyp  build.py  emulation-demo.bas  grammar-src.js  grammar-tiny.js  grammar-working.js  grammar.js  hello_world.bas  index.js  package-lock.json  package.json  pyproject.toml  scanner-src.cc  setup.py  token_list.txt  token_processor.py  tree-sitter.json
.github/: README.md
.github/workflows/: rust.yml
bindings/c/: tree-sitter-applesoft.h  tree-sitter-applesoft.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tree_sitter_applesoft/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
queries/: highlights.scm
script/: build.ps1  build.py  grammar-src.js  scanner-src.c  token_list.txt  token_processor.py
src/: grammar.json  node-types.json  parser.c  scanner-src.cc  scanner.c  scanner.cc
test/: README.md  hello_world.bas
test/corpus/: arrays-strings.txt  control-statements.txt  emulation.txt  extended.txt  flow-control.txt  functions.txt  general.txt  graphics.txt  input-output.txt  precedence.txt  utility.txt  vars-arithmetic.txt
test/highlight/: ampersand.bas  data.bas  demo.bas  functions.bas  input-output.bas  string-functions.bas
