[package]
name = "tree-sitter-applesoft"
description = "applesoft grammar for the tree-sitter parsing library"
version = "3.1.1"
keywords = ["incremental", "parsing", "applesoft"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/dfgordon/tree-sitter-applesoft"
homepage = "https://github.com/dfgordon/tree-sitter-applesoft"
readme = "README-crate.md"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.8"

[build-dependencies]
cc = "1.0"
