[package]
name = "tree-sitter-applesoft"
description = "parser for Applesoft BASIC"
version = "5.0.0"
authors = ["Daniel Gordon"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "applesoft"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/dfgordon/tree-sitter-applesoft"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.8"
